springboot/rvtadmin/service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: service-2
        labels:
                app: service-2

spec:
    template:
       metadata:
           labels:
              app: service-2
       spec:
         containers:
         -     name: service
               image: harbor.rockvillegroup.com/ropay/service-2
               ports:
               -   containerPort: 8090

    selector:
               matchLabels:
                   app: service-2
