springboot/rvtadmin/service-1_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    app: service1
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8082
  selector:
    app: service-1
