springboot/rvtadmin/service-2_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service2
  labels:
    app: service2
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8090
  selector:
    app: service-2
